# Renderer2D

./: .clang-format  .gitignore  CMakeLists.txt
demo/: main.cpp
include/: buffers.h  quads.h  renderer.h  shader.h  texture.h  triangles.h  types.h  util.h  vertex_array.h
res/: fragment_basic_polygon.glsl  fragment_batch_polygon.glsl  vertex_basic_polygon.glsl  vertex_batch_polygon.glsl
src/: buffers.cpp  quads.cpp  renderer.cpp  shader.cpp  texture.cpp  triangles.cpp  vertex_array.cpp
